--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
