--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "axiom-py>=0.9.0",
+    "pydantic-settings>=2.9.1",
     "ruff>=0.11.7",
 ]
