--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "axiom-py>=0.9.0",
     "boto3>=1.38.5",
+    "duckdb>=1.2.2",
     "fastapi>=0.115.12",
     "pandas>=2.2.3",
     "pgvector>=0.4.1",
