build: Embedding pipeline finally

--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -9,8 +9,10 @@ dependencies = [
     "asyncpg>=0.30.0",
     "axiom-py>=0.9.0",
     "boto3>=1.38.5",
+    "dspy>=2.6.23",
     "duckdb>=1.2.2",
     "fastapi>=0.115.12",
+    "google-genai>=1.15.0",
     "pandas>=2.2.3",
     "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
