--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "duckdb>=1.2.2",
     "fastapi>=0.115.12",
     "google-genai>=1.15.0",
+    "mlflow>=1.27.0",
     "pandas>=2.2.3",
     "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
