--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "mlflow>=1.27.0",
     "pandas>=2.2.3",
     "pgvector>=0.4.1",
+    "protobuf==3.20.3",
     "psycopg2-binary>=2.9.10",
     "pyarrow>=20.0.0",
     "pydantic>=2.11.3",
