--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -21,8 +21,18 @@ dependencies = [
     "pyarrow>=20.0.0",
     "pydantic>=2.11.3",
     "pydantic-settings>=2.9.1",
+    "pytest-cov~=5.0",
+    "pytest~=8.2",
     "python-multipart>=0.0.20",
     "ruff>=0.11.7",
     "sqlalchemy>=2.0.40",
     "uvicorn[standard]>=0.34.2",
+    "pytest-mock~=3.14",
+    "httpx~=0.27",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "."
+]
+testpaths = ["tests"]
