--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "uvicorn[standard]>=0.34.2",
     "pytest-mock~=3.14",
     "httpx~=0.27",
+    "mcp>=1.9.4",
 ]
 
 [tool.pytest.ini_options]
