--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -32,8 +32,24 @@ dependencies = [
     "mcp>=1.9.4",
 ]
 
+[tool.ruff]
+line-length = 120
+target-version = "py312"
+
+[tool.ruff.lint]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+
 [tool.pytest.ini_options]
 pythonpath = [
   "."
 ]
 testpaths = ["tests"]
+
