add: neo4j database

--- a/engine/makefile
+++ b/engine/makefile
@@ -11,6 +11,14 @@ mlflow:
 	@echo ">>> Running MLflow server..."
 	@mlflow server --host 127.0.0.1 --port 3080
 
+kg-up:
+	@echo ">>> Starting Neo4j service..."
+	@docker-compose -f docker/neo4j_service/docker-compose.yml up -d
+
+kg-down:
+	@echo ">>> Stopping Neo4j service..."
+	@docker-compose -f docker/neo4j_service/docker-compose.yml down
+
 install:
 	@echo ">>> Installing dependencies using uv..."
 	@uv pip sync pyproject.toml
@@ -71,4 +79,4 @@ requirements:
 	@echo ">>> Generating requirements.txt..."
 	@uv pip compile pyproject.toml --generate-hashes -o requirements.txt
 
-.PHONY: all mlflow install run lint format check clean migrate-up migrate-down migrate-down-all migrate-create-empty migrate-create requirements
+.PHONY: all mlflow install kg-up kg-down run lint format check clean migrate-up migrate-down migrate-down-all migrate-create-empty migrate-create requirements
