feat: add neo4j graph interface

--- a/engine/docker/neo4j_service/Dockerfile
+++ b/engine/docker/neo4j_service/Dockerfile
@@ -1,6 +1,6 @@
 FROM neo4j:5.20.0
 
 
-ENV NE04J_PLUGINS='["apoc", "graph-data-science", "neo4j-graph-algorithms"]'
+ENV NEO4J_PLUGINS='["apoc", "graph-data-science"]'
 
 COPY conf/custom.conf /var/lib/neo4j/conf
