--- a/engine/docker/neo4j_service/docker-compose.yml
+++ b/engine/docker/neo4j_service/docker-compose.yml
@@ -6,22 +6,17 @@ services:
     build: .
     container_name: kg-neo4j
     hostname: neo4j-prod
-    
-    env_file:
-      - .env
 
     environment:
-      - NEO4J_AUTH=neo4j/${NEO4J_PASSWORD}
+      - NEO4J_AUTH=none # Use the password from .env
+      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
 
       # Production Memory Configuration
       # Adjust these based on your server's available RAM.
       # Example for a server with 16GB RAM:
-      - NEO4J_server_memory_heap_initial__size=4G
-      - NEO4J_server_memory_heap_max__size=4G
-      - NEO4J_server_memory_pagecache_size=8G
-      
-      # Accept the license agreement for Enterprise features enabled by plugins like GDS
-      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
+      - NEO4J_server_memory_heap_initial__size=1G
+      - NEO4J_server_memory_heap_max__size=1G
+      - NEO4J_server_memory_pagecache_size=1G
 
     ports:
       - "7474:7474" # For the Neo4j Browser (HTTP)
@@ -35,7 +30,7 @@ services:
     restart: unless-stopped
     
     healthcheck:
-      test: ["CMD-SHELL", "wget -O /dev/null http://localhost:7474 || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:7474 || exit 1"]
       interval: 5s
       timeout: 10s
       retries: 3
